# DS2502

./: .arduino build.txt.kate-swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  arduino build.txt  hardware  how to start simulide  onewire.sim1  test.sim1
hardware/: Arduino.kicad_sch  DS2502_prog.kicad_pcb  DS2502_prog.kicad_prl  DS2502_prog.kicad_pro  DS2502_prog.kicad_sch  programmer.kicad_sch  sym-lib-table
simulator/: onewire.sim1  programmer.sim1
software/: CMakeLists.txt
software/src/: main.cpp  test.cpp  test.cpp.not
src/: main.cpp  main.ino
src/arduino/: Arduino.h
